# Recruitment_eagletrt

driverless/project_3/: PointCount_BoxDim.txt  main.py
driverless/project_4/Solution/: coordinates.txt  main.py
telemetry/: Commandos.txt
telemetry/project_2/: CMakeLists.txt  Sol_Readme.txt  main.cpp
telemetry/project_2/include/: parser.h  reader.h  statistics.h  writer.h
telemetry/project_2/src/: fake_receiver.c  fake_reciever2.cpp  main.cpp  reader.cpp  statistics.cpp  writer.cpp
